Tyler: Trying to clean up Eclipse warnings. (unused imports)

--- a/forge src/.project
+++ b/forge src/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>forge-1.7.2-10.12.1.1060-src</name>
+	<name>A_Forge_2</name>
 	<comment/>
 	<projects/>
 	<natures>
